<resources>
    <string name="app_name">WeTongji</string>
    <string name="menu_settings">Settings</string>
    <string name="title_dialog_update_found">Found new update</string>
    <string name="text_btn_update">Update</string>
    <string name="text_btn_not_now">Not now</string>
    <string name="action_settings">Settings</string>
    <string name="msg_dialog_update_found">New version %1$s found.\n%2$s</string>
    <string name="title_activity_authenticator">AuthenticatorActivity</string>
    <string name="title_mainmenu_today">Today</string>
    <string name="title_mainmenu_news">News</string>
    <string name="title_mainmenu_events">Activities</string>
    <string name="title_mainmenu_now">Now</string>
    <string name="title_mainmenu_search">Search</string>
    <string name="title_mainmenu_billboard">Billboard</string>
    <string name="title_mainmenu_profile">Profile</string>
    <string name="title_mainmenu_oa">OA System</string>
    <string name="title_mainmenu_library">My Library</string>
    <string name="title_mainmenu_assistant">Assistant</string>
    <string name="text_student_id">Student ID</string>
    <string name="text_password">Password</string>
    <string name="text_name">Name</string>
    <string name="text_login">Log In</string>
    <string name="dialog_title_regitster_success">Register success</string>
    <string name="dialog_msg_need_to_active">Before you can login, you should check your @tongji.edu.cn mailbox and click the activation link. </string>
    <string name="msg_progress_registering">Registering</string>
    <string name="xlistview_footer_hint_ready">Pull to refresh</string>
    <string name="xlistview_footer_hint_loading">Loading more…</string>
    <string name="xlistview_footer_hint_normal">Press to load more</string>
    <string name="text_only_one_account">Only one WeTongji account can be supported.</string>
    <string name="text_error_service_down">Service down</string>
    <string name="text_error_check_network">Network error</string>
    <string name="text_error_request_login_again">Please login again</string>
    <string name="text_error_request_login">Please login</string>
    <string name="text_error_already_registried">Already registried</string>
    <string name="text_error_student_id_and_name_not_match">Student no and name not match</string>
    <string name="text_error_password_not_meet_specifications">Password doesn\'t meet specifications</string>
    <string name="text_error_account_not_actived">Account needs to be actived</string>
    <string name="text_error_student_id_not_exist">Student ID doesn\'t exist</string>
    <string name="text_error_wrong_username_password">Wrong username/password</string>
    <string name="text_error_student_id_not_registried">Student no hasn\'t registried</string>
    <string name="text_error_friends_not_allowed_due_to_privacy">Can\'t add friend due to his\/her privacy settings</string>
    <string name="text_error_student_id_required">Please input student id</string>
    <string name="text_error_password_requried">Please input password</string>
    <string name="text_error_net_disconnect">Network is not connected</string>
    <string name="text_create_account">Create Your Account</string>
    <string name="text_not_now">Not Now</string>
    <string name="text_sign_up_log_in">Sign Up / Log In</string>
    <string name="content_description_all">Image</string>
    <string name="text_wt_slogan">Campus In Your Pocket</string>
    <string name="text_today_now">Now</string>
    <string name="text_today">Today</string>
    <string name="text_news">News</string>
    <string name="text_events">Activities</string>
    <string name="text_features">Features</string>
    <string name="img_content_description">ImageView</string>
    <string name="text_now_indicator">Now</string>
    <string name="text_friends_counter">%1$d Friends</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_evnet_detail_organization">ORGANIZATION</string>
    <string name="text_event_about">ABOUT</string>
    <string name="text_event_time_1">Time 1</string>
    <string name="text_week">WEEK</string>
    <string name="text_event_invite">INVITE</string>
    <string name="text_event_detail_friends">FRIENDS</string>
    <string name="text_event_detail_attend">ATTEND</string>
    <string name="text_event_detail_attended">ATTENDED</string>
    <string name="text_register_account">ACCOUNT</string>
    <string name="text_back">Back</string>
    <string name="text_next">Next</string>
    <string name="text_take_photo">Take a photo</string>
    <string name="text_pick_photo">Choose from gallary</string>
    <string name="text_set_avatar">Set avatar</string>
    <string name="text_no_sdcard">No SD card</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_no_camera">No camera</string>
    <string name="text_no_image_editor">No image editor</string>
    <string name="text_confirm_terms_of_use">By tapping Next you are indicating that you have 
read and agree to the <u><b>Term of Use</b></u></string>
    <string name="text_menu_reload">Reload</string>
    <string name="text_event_channel_id_1">Academics</string>
    <string name="text_event_channel_id_2">Competition</string>
    <string name="text_event_channel_id_3">Entertainment</string>
    <string name="text_event_channel_id_4">Enterprise</string>
    <string name="text_news_category_1">Campus Update</string>
    <string name="text_news_category_2">Administrative Affairs</string>
    <string name="text_news_category_3">Club News</string>
    <string name="text_news_category_4">Local Recommendation</string>
    <string name="text_people">Stars</string>
    <string name="text_most_popular_account">Most Popluar Account</string>
    <string name="text_u_like_this_activity">You have liked this activity</string>
    <string name="text_u_like_this_information">You have liked this information</string>
    <string name="menu_event_sort_order">Sort</string>
    <string name="menu_event_filter_expired">Filter Expired</string>
    <string name="menu_more">More</string>
    <string name="menu_activity_type">Type</string>
    <string name="channel_sort_publish_time_reverse_order">Publish Time Reverse</string>
    <string name="channel_sort_like">Like Reverse</string>
    <string name="channel_sort_publish_time_order">Publish Time</string>
    <string name="share_from_we">"（share from @WeTongji）http://we.tongji.edu.cn/"</string>
    <string name="test_share">Share</string>
    <string name="profile_info">INFO</string>
    <string name="profile_personal_info">PERSONAL INFO</string>
    <string name="profile_section_friendlist">Friend List</string>
    <string name="profile_section_participated_activities">Participated Activities</string>
    <string name="profile_section_participated_course">Participated Courses</string>
    <string name="profile_section_my_profile">My Profile</string>
    <string name="profile_section_motto">Motto</string>
    <string name="profile_section_phone">Phone</string>
    <string name="profile_section_email">Email</string>
    <string name="things_i_like">THINGS I LIKE</string>
    <string name="profile_section_events">Activity Detail</string>
    <string name="profile_section_persons">Stars</string>
    <string name="profile_section_new">News Detail</string>
    <string name="profile_section_org">Organizations</string>
    <string name="profile_section_user">Users</string>
    <string name="profile_section_birthday">Birthday</string>
    <string name="profile_section_student_no">Student NO.</string>
    <string name="profile_section_major">Major</string>
    <string name="need_account_login">This Needs User Login</string>
    <string name="format_likes">%d Likes</string>
    <string name="format_attend_course">%d Courses</string>
    <string name="format_attend_activity">%d Items</string>
    <string name="text_banner_publisher_mask">\@%1$s</string>
    <string name="save_image">Store into Picture Folder</string>
    <string name="image_stored_at">Picture was stored at </string>
    <string name="image_save_failed">Save Pictrue Failed</string>
    <string name="people_current_star">Current Star</string>
    <string name="people_vol">Vol.%d</string>
    <string name="notification_title">Notifications</string>
    <string name="text_people_detail_title">TITLE</string>
    <string name="share_person">(WeTongji Stars NO.%d)</string>
    <string name="no_account_error">Login in Please</string>
    <string name="no_friends_error">No Friends Attend</string>
    <string name="hint_search_in_wetongji">Search in WeTongji</string>
    <string name="search">Search</string>
    <string name="search_history_title">Search History</string>
    <string name="search_type_all">all</string>
    <string name="search_type_people">user</string>
    <string name="search_type_organizations">organizations</string>
    <string name="search_type_news">news</string>
    <string name="search_type_activities">activities</string>
    <string name="search_type_stars">stars</string>
    <string name="search_type_information">Information</string>
    <string name="search_history_clear">Clear History</string>
    <string name="friend_activity_name">Friends</string>
    <string name="friend_detail_part_events">Participated Activities</string>
    <string name="friend_detail_about">About</string>
    <string name="friend_detail_major">Major</string>
    <string name="friend_detail_grade">Grade</string>
    <string name="friend_detail_email">Email</string>
    <string name="friend_detail_phone">Phone</string>
    <string name="friend_detail_birth">Birthday</string>
    <string name="friend_detail_student">Student NO</string>
    <string name="friend_detail_sina">Sina Weibo</string>
    <string name="friend_detail_qq">QQ</string>
    <string name="friend_detail_dorm">Dorm</string>
    <string name="search_tip_all">Search all</string>
    <string name="search_tip_users">Search users for </string>
    <string name="search_tip_org">Search organizations for </string>
    <string name="search_tip_activity">Search activities for </string>
    <string name="search_tip_news">Search news for</string>
    <string name="search_tip_stars">Search stars for </string>
    <string name="search_tip_course">Search course for </string>
    <string name="type_users">User</string>
    <string name="type_org">Organization</string>
    <string name="type_activities">Activities</string>
    <string name="type_information">News</string>
    <string name="type_stars">Star</string>
    <string name="type_courses">Course</string>
    <string name="profile_button_text">Change Avatar</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invite_title">Invite</string>
    <string name="activity_label_schedule">Schedule</string>
    <string name="course_section_teacher">Teacher</string>
    <string name="course_section_number">Course No.</string>
    <string name="course_section_credit">Credit</string>
    <string name="course_section_hours">Hours</string>
    <string name="course_section_type">Type</string>
    <string name="course_section_class_time">Class time</string>
    <string name="course_section_time_type">Type</string>
    <string name="text_confirm">Confirm</string>
	<string name="pref_clear_cache">Clear photo cache</string>
	<string name="pref_clear_cache_summary">Total %dKB</string>
	<string name="pref_change_pwd">Change password</string>
	<string name="pref_about">About</string>
	<string name="pref_about_we">About WeTongji</string>
	<string name="pref_general">General</string>
	<string name="reset_password">Providing your Student ID and name to reset your WeTongji password</string>
    <string name="interval_never">Never</string>
    <string name="interval_45sec">45 sec</string>
    <string name="interval_2min">2 min</string>
    <string name="interval_5min">5 min</string>
    <string name="interval_10min">10 min</string>
</resources>