<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@id/menu_eventlist_reload"
        android:showAsAction="always"
        android:title="@string/text_menu_reload"
        android:icon="@drawable/abs_event_reload"/>
    
    <item
        android:title="@string/menu_more"
	    android:showAsAction="always"
	    android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_light">

		<menu>
			<group>
			    <item
			        android:showAsAction="never"
			        android:title="@string/menu_event_sort_order"
			        >
			        <menu>
						<group
							android:checkableBehavior="single">
			
						    <item android:id="@+id/cb_event_sort_publish_time_reverse_order"
						        android:title="@string/channel_sort_publish_time_reverse_order"
						        android:checked="true" />
						    <item android:id="@+id/cb_event_sort_publish_time_order"
						        android:title="@string/channel_sort_publish_time_order"/>
							<item android:id="@+id/cb_activity_sort_like_all" 
							    android:title="@string/channel_sort_like" />
						</group>
					</menu>
			    </item>
			    
			    <item 
			        android:showAsAction="never"
			        android:title="@string/menu_activity_type">
			        <menu>
				        <group>
				            <item 
				                android:id="@id/cb_academic" 
				                android:showAsAction="never"
								android:checkable="true" 
								android:checked="false" 
								android:title="@string/text_event_channel_id_1" />
							<item 
							    android:id="@id/cb_competition" 
							    android:showAsAction="never"
								android:checkable="true" 
								android:checked="false" 
								android:title="@string/text_event_channel_id_2" />
							<item
							    android:id="@id/cb_entertainment" 
							    android:showAsAction="never"
								android:checkable="true" 
								android:checked="false" 
								android:title="@string/text_event_channel_id_3" />
							<item 
							    android:id="@id/cb_employ" 
							    android:showAsAction="never"
								android:checkable="true" 
								android:checked="false" 
								android:title="@string/text_event_channel_id_4" />
				        </group>
				    </menu>
			    </item>
			    
			    <item
			        android:id="@+id/cb_event_expired"
			        android:showAsAction="never"
			        android:checkable="true" 
					android:checked="false"
			        android:title="@string/menu_event_filter_expired"
			        />
			</group>
			
		</menu>
		
	</item>
</menu>