<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_general"
        android:title="@string/pref_general" >
        
        <Preference
            android:key="pref_change_pwd"
            android:summary=""
            android:title="@string/pref_change_pwd" />
		
        <Preference
            android:key="pref_clear_cache"
            android:summary="@string/pref_clear_cache_summary"
            android:title="@string/pref_clear_cache"/>
        
    </PreferenceCategory>

    <PreferenceCategory 
        android:key="pref_key_about"
        android:title="@string/pref_about">
        
       	<Preference 
       	    android:key="pref_about"
       	    android:summary=""
       	    android:title="@string/pref_about_we"/>
       	
    </PreferenceCategory>
    
</PreferenceScreen>