<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".LoginFragment" >

    <EditText 
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="8dp"
        android:textColor="@color/et_text"
        android:hint="@string/text_student_id"
        android:textColorHint="@color/et_text_hint"
        android:inputType="number" />
    
    <EditText 
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/et_username"
        android:textColor="@color/et_text"
        android:hint="@string/text_password"
        android:textColorHint="@color/et_text_hint"
        android:inputType="textPassword" />
    
    <Button 
        android:id="@+id/btn_login"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="10dp"
        android:text="@string/text_login"
        android:textColor="@color/btn_text"
        android:focusableInTouchMode="true">
        <requestFocus/>
	</Button>
    
    <Button
        android:id="@+id/btn_create_account" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="6dp"
        android:text="@string/text_create_account"
        android:textColor="@color/btn_text"/>

</RelativeLayout>